gcc/testsuite/rust/rustc/ui/typeck/call-block_dg.rs
fn main() {
    let _ = {42}(); // { dg-error ".E0618." "" { target *-*-* } }
}

